correcting font sizes and gaps for each scale

--- a/packages/calcite-components/src/components/input-time-picker/input-time-picker.scss
+++ b/packages/calcite-components/src/components/input-time-picker/input-time-picker.scss
@@ -72,9 +72,9 @@
 :host([scale="s"]) {
   .container {
     block-size: 1.5rem;
-    font-size: var(--calcite-font-size--2);
-    gap: var(--calcite-spacing-xs);
-    padding-inline: var(--calcite-spacing-xs);
+    font-size: var(--calcite-font-size-sm);
+    gap: var(--calcite-spacing-sm);
+    padding-inline: var(--calcite-spacing-sm);
   }
   .input-container {
     line-height: 1rem;
@@ -84,7 +84,7 @@
 :host([scale="m"]) {
   .container {
     block-size: 2rem;
-    font-size: var(--calcite-font-size--1);
+    font-size: var(--calcite-font-size);
     gap: var(--calcite-spacing-md);
     padding-inline: var(--calcite-spacing-md);
   }
@@ -96,9 +96,9 @@
 :host([scale="l"]) {
   .container {
     block-size: 2.75rem;
-    font-size: var(--calcite-font-size-0);
-    gap: var(--calcite-spacing-lg);
-    padding-inline: var(--calcite-spacing-lg);
+    font-size: var(--calcite-font-size-md);
+    gap: var(--calcite-spacing-xl);
+    padding-inline: var(--calcite-spacing-xl);
   }
   .input-container {
     line-height: 2.25rem;
